Комментарии поправил, исправил ошибку rsyslog.d

--- a/3.ansible/pgsql-prometheus.yml
+++ b/3.ansible/pgsql-prometheus.yml
@@ -4,15 +4,14 @@
   # По заданию 
   # "Напишите простой ansible-скрипт по развороту Prometheus сервера с БД postgres на debian 11 c комментариями для выбранных шагов"
   #
-  # Ниже "простой ansible-скрипт", без ролей, без дэбаг-сообщений и зависимостей тасков
+  # Ниже "простой ansible-скрипт", без ролей, без секретов, без дэбаг-сообщений и зависимостей тасков
   # Предусмотрена проверка версии ОС
   #
   # В задании сказано: "Prometheus сервер с БД postgres", насколько мне удалось разобраться с прометеусом, он принципиально пишет данные в файлы
   # на диске, не в БД. На сайте продукта не нашел кейсов по хранению его данных в БД. Могу ошибаться, раньше с ним не работал.
   #
-  # В части настройки сбора статистики СУБД в прометеус в задании также не сказано. В данном случае можно добавить postgres exporter, но скрипт
-  # увеличится вдвое. При такой постановке задачи не понятен следующий шаг, и сделать лишнее может обернуться ошибкой.
-  #
+  # В части настройки сбора статистики СУБД в прометеус в задании также не сказано. В данном случае можно добавить postgres exporter, но и скрипт
+  # увеличится вдвое. Вообще, при имеющейся постановке задачи не понятен следующий шаг, и сделать лишнее может обернуться ошибкой.
 
   # ПЛАН ДЕЙСТВИЙ:
   # 1. Проверить версии операционки по фактам
@@ -43,7 +42,7 @@
       ########################
 
     - name: "Checking operating system version for Debian{{ debian_version }}"
-      # Получаю данные о версии ОС, если не совпадают с нужными, то end_play
+      # Получаю данные о версии ОС, если не совпадают с нужными, то конец игры
       meta: end_play
       when: not (ansible_distribution == "Debian" and ansible_distribution_major_version == "{{ debian_version }}")
 
@@ -160,7 +159,7 @@
       # Кастомные настройки журналов
       template:
         src: "{{ item }}.log.conf.j2"
-        dest: /etc/systemd/system/10-{{ item }}.conf
+        dest: /etc/rsyslog.d/10-{{ item }}.conf
         owner: root
         group: root
         mode: 0644
