Финальная редакция на 18.04 13:00

--- a/3.ansible/pgsql-prometheus.yml
+++ b/3.ansible/pgsql-prometheus.yml
@@ -4,7 +4,7 @@
   # По заданию 
   # "Напишите простой ansible-скрипт по развороту Prometheus сервера с БД postgres на debian 11 c комментариями для выбранных шагов"
   #
-  # Ниже "простой ansible-скрипт", без ролей, без секретов, без дэбаг-сообщений и зависимостей тасков
+  # Ниже "простой ansible-скрипт", без ролей, без дэбаг-сообщений и зависимостей тасков
   # Предусмотрена проверка версии ОС
   #
   # В задании сказано: "Prometheus сервер с БД postgres", насколько мне удалось разобраться с прометеусом, он принципиально пишет данные в файлы
@@ -27,9 +27,12 @@
   gather_facts: yes      # Принудительно собираю факты, чтобы удостовериться в том, какая версия системы
   become: yes            # Нужно будет повышение для установки
 
+  vars_files:
+    - secrets.enc
+
   vars:
     db_user: prometheus                       # Параметры базы данных
-    db_password: prometheus
+    #db_password: prometheus                  # перемещен в secrets
     db_name: prometheus
     service_user: prometheus                  # Под этой учеткой запущу демон прометея
     prometheus_version: 2.51.2.linux-amd64    # Когда буду ставить прометея, чтобы много раз руками не набирать
