--- a/5.vault/good.approle/play.yml
+++ b/5.vault/good.approle/play.yml
@@ -5,18 +5,13 @@
   # Использую плагин community.hashi_vault.hashi_vault
   # https://docs.ansible.com/ansible/latest/collections/community/hashi_vault/hashi_vault_lookup.html#ansible-collections-community-hashi-vault-hashi-vault-lookup
   # > ansible-galaxy collection install community.hashi_vault
-  #
-  # Переменную 'hashipass' получаю через опцию '-e' при вызове ansible-playbook в jenkins
 
   tasks:
 
     - name: "Extracting data from vault"
       vars:
-        ansible_hashi_vault_url: "http://localhost:8200"
-        # ansible_hashi_vault_auth_method: token
-        ansible_hashi_vault_auth_method: userpass
-        ansible_hashi_vault_username: "ansible_service"
-        ansible_hashi_vault_password: "{{ hashipass }}"
+        ansible_hashi_vault_auth_method: token
+        # В этом случае токен берется из переменной окружения VAULT_TOKEN, которая передается из jenkins
       ansible.builtin.debug:
         msg: '{{ item }}'
       with_community.hashi_vault.vault_read:
